Make Correction to errors from css checker on spacing before rule

--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@ body {
   background-color: #191765;
   background-image: url(./images/Ellipse\ 18@2x.png);
   background-repeat: no-repeat;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-position-y: 50px;
   background-size: 100px;
 }
+
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -14,11 +13,13 @@ body {
   margin: 0 auto;
   align-items: center;
 }
+
 .nav-bar h2 {
-  color: #ffffff;
+  color: #fff;
   font-size: 18px;
   font-weight: 500;
 }
+
 .nav-bar img {
   height: 30px;
 }
